--- a/games/index.html
+++ b/games/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse target">
             <ul class="nav navbar-nav">
                 <li><a href="/index.html">Top</a></li>
-                <li class="active"><a href="/about/index.html">about</a></li>
+                <li class="active"><a href="/games/index.html">games</a></li>
                 <li><a href="/music/index.html">music</a></li>
                 <li><a href="/app/index.html">app</a></li>
                 <li><a href="/illust/index.html">illust</a></li>
