--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -5,14 +5,15 @@
 <meta name="viewport" content="width=500px,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>テストページ</title>
+<title>あほげー第29回参加作品「これドーナツ？ 〜画像認証トレーニング〜」 ｜　kinaphar.jp
+</title>
 
 
 <style type="text/css">
 a:link{text-decoration: none; color:#E6E6FA;}
 
 body {
-    background-color:#222222;
+    background-color:#401a00;
 	color: #FFFFFF;
 }
 </style>
@@ -22,14 +23,26 @@ body {
 <body>
 
 <center>
-<div style="border:1px solid gray; width:420px;">
+<div style="border:1px solid #ffd8be; width:420px;">
 
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
 
 <h2>遊び方</h2>
-<p>ここに遊び方を書く。</p>
+<p>「これドーナツ」？<br>
+    正しいなら「○」を、違うなら「×」を押して下さい。<br>
+    全20問。<br>
+    がんばってね！<br>
+</p>
+<br>
+
 <h2>お借りした素材</h2>
-<a href="http://～～～～">借りたところを書く</a><br>
+
+<a href="http://hothukurou.firebird.jp/blog/post-599">初心者でも２時間でブラウザゲームを作ってWebにアップしよう！ | 作っちゃうおじさん制作記録</a><br>
+こちらのソースコードを元に作成。初学のenchant.jsについてメチャクチャ学ばせてもらいました（感謝）。<br><br>
+<a href="https://www.irasutoya.com/">かわいいフリー素材集 いらすとや</a><br>
+ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）
+<a href="https://soundeffect-lab.info/">効果音ラボ - フリー、商用無料、報告不用の効果音素材をダウンロード</a><br>
+効果音をお借りしました。
 
 
 </div>
