--- a/games/kazu/index.html
+++ b/games/kazu/index.html
@@ -28,6 +28,16 @@ body {
 
 <h2>ドーナッツをたべきれ！</h2>
 <p>流れるドーナッツをクリックして食べまくろう！</p>
+<br>
+<p>made by かずまる</p>
+
+
+<h2>お借りした素材</h2>
+
+<a href="http://hothukurou.firebird.jp/blog/post-599">初心者でも２時間でブラウザゲームを作ってWebにアップしよう！ | 作っちゃうおじさん制作記録</a><br>
+こちらのソースコードを元に作成。初学のenchant.jsについてメチャクチャ学ばせてもらいました（感謝）。<br><br>
+<a href="https://www.irasutoya.com/">かわいいフリー素材集 いらすとや</a><br>
+ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）
 
 
 </div>
