--- a/games/kazu/index.html
+++ b/games/kazu/index.html
@@ -26,7 +26,7 @@ body {
 
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
 
-<h2>ドーナッツをたべきれ！！</h2>
+<h2>ドーナッツをたべきれ！！！！</h2>
 <p>流れるドーナッツをクリックして食べまくろう！！</p>
 <br>
 <p>made by かずまる</p>
