--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -10,22 +10,25 @@
 
 
 <style type="text/css">
-a:link{text-decoration: none; color:#E6E6FA;}
+a:link{text-decoration: none; color:rgb(255, 186, 38);}
+
+a:visited{text-decoration: none; color:rgb(204, 75, 0);}
 
 body {
     background-color:#401a00;
 	color: #FFFFFF;
 }
-</style>
+</style> 
 
 </head>
 
 <body>
 
-<center>
-<div style="border:1px solid #ffd8be; width:420px;">
+<div style="border:1px solid #ffd8be; width:420px; margin : 0 auto; padding : 0 10px;">
 
+<div style="text-align:center">
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+</div>
 
 <h2>遊び方</h2>
 <p>「これドーナツ」？<br>
@@ -46,7 +49,6 @@ body {
 
 
 </div>
-</center>
 </body>
 </html>
 
