--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -15,7 +15,7 @@ a:link{text-decoration: none; color:rgb(255, 186, 38);}
 a:visited{text-decoration: none; color:rgb(204, 75, 0);}
 
 body {
-    background-color:#401a00;
+    background-color:#200c00;
 	color: #FFFFFF;
 }
 </style> 
@@ -24,18 +24,29 @@ body {
 
 <body>
 
-<div style="border:1px solid #ffd8be; width:420px; margin : 0 auto; padding : 0 10px;">
-
+<div style="border:1px solid #ffd8be; max-width:600px; margin : 0 auto; padding : 0 10px; 
+background-color:#4b1e00;">
 <div style="text-align:center">
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
 </div>
 
 <h2>遊び方</h2>
 <p>「これドーナツ」？<br>
-    正しいなら「○」を、違うなら「×」を押して下さい。<br>
-    全20問。<br>
-    がんばってね！！<br>
+    正しければ「○」、違うなら「×」を押そう。<br>
+    目指せ完全クリア！（全20問）<br>
 </p>
+
+<br>
+<h2>↓↓ [ 👍あほね！ ] ボタン押していってね ↓↓</h2>
+<s><span style="font-size: 75%">（連打でカウント増える模様）</span></s>
+<div style="width:460px;height:280px;margin:0px;overflow:hidden;">
+    <iframe width="800px" height="500px" frameborder="3" style="margin:0px 0 0 -204px; overflow:hidden;" src="https://ahoge.info/29/index.php#24">
+    </iframe>
+</div>
+<br>
+<span style="font-size:120%"><strong>▲ <a href="https://ahoge.info/29/index.php">あほげー ｜ あほげー第29回 作品一覧</a></strong></span><span> より引用（埋め込み）</span>
+<br>
+<br>
 <br>
 
 <h2>お借りした素材</h2>
