--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -54,7 +54,7 @@ background-color:#4b1e00;">
 <a href="http://hothukurou.firebird.jp/blog/post-599">初心者でも２時間でブラウザゲームを作ってWebにアップしよう！ | 作っちゃうおじさん制作記録</a><br>
 こちらのソースコードを元に作成。初学のenchant.jsについてメチャクチャ学ばせてもらいました（感謝）。<br><br>
 <a href="https://www.irasutoya.com/">かわいいフリー素材集 いらすとや</a><br>
-ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）
+ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）<br>
 <a href="https://soundeffect-lab.info/">効果音ラボ - フリー、商用無料、報告不用の効果音素材をダウンロード</a><br>
 効果音をお借りしました。
 
