--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -10,9 +10,9 @@
 
 
 <style type="text/css">
-a:link{text-decoration: none; color:rgb(255, 186, 38);}
+a:link{text-decoration: none; color:rgb(59, 183, 255);}
 
-a:visited{text-decoration: none; color:rgb(204, 75, 0);}
+a:visited{text-decoration: none; color:rgb(134, 92, 202);}
 
 body {
     background-color:#200c00;
@@ -31,20 +31,28 @@ background-color:#4b1e00;">
 </div>
 
 <h2>遊び方</h2>
-<p>「これドーナツ」？<br>
+<p>「これドーナツ？」<br>
     正しければ「○」、違うなら「×」を押そう。<br>
     目指せ完全クリア！（全20問）<br>
 </p>
 
 <br>
 <h2>↓↓ [ 👍あほね！ ] ボタン押していってね ↓↓</h2>
+<span>▼ <a href="https://ahoge.info/29/index.php#24">あほげー ｜ あほげー第29回 作品一覧</a> より引用（埋め込み）</span><br>
 <s><span style="font-size: 75%">（連打でカウント増える模様）</span></s>
 <div style="width:460px;height:280px;margin:0px;overflow:hidden;">
     <iframe width="800px" height="500px" frameborder="3" style="margin:0px 0 0 -204px; overflow:hidden;" src="https://ahoge.info/29/index.php#24">
     </iframe>
 </div>
 <br>
-<span style="font-size:120%"><strong>▲ <a href="https://ahoge.info/29/index.php">あほげー ｜ あほげー第29回 作品一覧</a></strong></span><span> より引用（埋め込み）</span>
+<span>※スマホの方はココからアクセス↓</span><br>
+<span><a href="https://ahoge.info/29/index.php#24">あほげー ｜ あほげー第29回 作品一覧</a></span>
+<br>
+<br>
+<br>
+<h2>作った人（＆広報用ツイート）</h2>
+▼ RTして応援してください🙏
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【あほげー第29回参加作品】<br>「これドーナツ？ 〜画像認証トレーニング〜」<br><br>ここで遊べます： <a href="https://t.co/wuYVmvaFlY">https://t.co/wuYVmvaFlY</a><br><br>24時間でゲームを作る <a href="https://twitter.com/hashtag/ahoge?src=hash&amp;ref_src=twsrc%5Etfw">#ahoge</a> に参戦しました！<br>目指せ完全クリア（全20問） <a href="https://t.co/lvGyDuIB97">pic.twitter.com/lvGyDuIB97</a></p>&mdash; きなふぁ🦊｜作曲 (@kinaphar) <a href="https://twitter.com/kinaphar/status/1150080618169921536?ref_src=twsrc%5Etfw">July 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <br>
 <br>
@@ -54,7 +62,7 @@ background-color:#4b1e00;">
 <a href="http://hothukurou.firebird.jp/blog/post-599">初心者でも２時間でブラウザゲームを作ってWebにアップしよう！ | 作っちゃうおじさん制作記録</a><br>
 こちらのソースコードを元に作成。初学のenchant.jsについてメチャクチャ学ばせてもらいました（感謝）。<br><br>
 <a href="https://www.irasutoya.com/">かわいいフリー素材集 いらすとや</a><br>
-ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）<br>
+ジャスト20点だけイラスト素材をお借りしました（有料になるのは21点以上使用時）<br><br>
 <a href="https://soundeffect-lab.info/">効果音ラボ - フリー、商用無料、報告不用の効果音素材をダウンロード</a><br>
 効果音をお借りしました。
 
