--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -27,7 +27,8 @@ body {
 <div style="border:1px solid #ffd8be; max-width:600px; margin : 0 auto; padding : 0 10px; 
 background-color:#4b1e00;">
 <div style="text-align:center">
-<iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+<iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe><br>
+<span>※音が出るよ</span>
 </div>
 
 <h2>遊び方</h2>
@@ -56,6 +57,7 @@ background-color:#4b1e00;">
 <br>
 <br>
 <br>
+
 
 <h2>お借りした素材</h2>
 
