--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
         <div style="background:#FFFFFF;">
             <h1>welcome</h1>
+            <p>※ドメイン死んでたのでGitHub Pagesに仮設 2019-07-13</p>
             <hr>
-            <h2>新作ゲーム（2018-07-15）</h2>
-            こちら→ <a href="http://kinaphar.jp/game/salad/index.html">あほげー第26回参加作品「これさらだ？」</a>
+            <h2>新作ゲーム（2019-07-14）</h2>
+            こちら→ <a href="http://kinaphar.jp/games/donuts/index.html">あほげー第29回参加作品「これドーナツ？」</a>
             <hr>
             <h2>Guide</h2>
             <ul>
