--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -28,7 +28,7 @@ body {
 background-color:#4b1e00;">
 <div style="text-align:center">
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe><br>
-<span>※音が出るよ</span>
+<span>※音が出るよ　画面内タップでBGM開始</span>
 </div>
 
 <h2>遊び方</h2>
