clean up repositor

--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -28,7 +28,7 @@ body {
 background-color:#4b1e00;">
 <div style="text-align:center">
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe><br>
-<span>※音が出るよ　画面内タップでBGM開始</span>
+<span>※音が出るよ　※急に始まるよ</span>
 </div>
 
 <h2>遊び方</h2>
@@ -56,6 +56,8 @@ background-color:#4b1e00;">
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【あほげー第29回参加作品】<br>「これドーナツ？ 〜画像認証トレーニング〜」<br><br>ここで遊べます： <a href="https://t.co/wuYVmvaFlY">https://t.co/wuYVmvaFlY</a><br><br>24時間でゲームを作る <a href="https://twitter.com/hashtag/ahoge?src=hash&amp;ref_src=twsrc%5Etfw">#ahoge</a> に参戦しました！<br>目指せ完全クリア（全20問） <a href="https://t.co/lvGyDuIB97">pic.twitter.com/lvGyDuIB97</a></p>&mdash; きなふぁ🦊｜作曲 (@kinaphar) <a href="https://twitter.com/kinaphar/status/1150080618169921536?ref_src=twsrc%5Etfw">July 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <br>
+<h2>BGMについて</h2>
+
 <br>
 
 
