--- a/games/donuts/index.html
+++ b/games/donuts/index.html
@@ -28,7 +28,7 @@ body {
 background-color:#4b1e00;">
 <div style="text-align:center">
 <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe><br>
-<span>※音が出るよ　※急に始まるよ</span>
+<span>※急に始まるよ　※音が出るよ</span>
 </div>
 
 <h2>遊び方</h2>
@@ -56,13 +56,15 @@ background-color:#4b1e00;">
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">【あほげー第29回参加作品】<br>「これドーナツ？ 〜画像認証トレーニング〜」<br><br>ここで遊べます： <a href="https://t.co/wuYVmvaFlY">https://t.co/wuYVmvaFlY</a><br><br>24時間でゲームを作る <a href="https://twitter.com/hashtag/ahoge?src=hash&amp;ref_src=twsrc%5Etfw">#ahoge</a> に参戦しました！<br>目指せ完全クリア（全20問） <a href="https://t.co/lvGyDuIB97">pic.twitter.com/lvGyDuIB97</a></p>&mdash; きなふぁ🦊｜作曲 (@kinaphar) <a href="https://twitter.com/kinaphar/status/1150080618169921536?ref_src=twsrc%5Etfw">July 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <br>
-<h2>BGMについて</h2>
-
 <br>
-
-
+<h2>BGMについて（曲名「炒飯 -Rice On Fire-」）</h2>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/613085751&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+<span>サークル <a href="https://twitter.com/Crystarhythm">Crystarhythm</a> として作った曲です。<br>
+2019春M3頒布CD「非零和 -Non Zero Sum-」より。<br>（BGM用に音量下げてあります）</span>
+<br>
+<br>
+<br>
 <h2>お借りした素材</h2>
-
 <a href="http://hothukurou.firebird.jp/blog/post-599">初心者でも２時間でブラウザゲームを作ってWebにアップしよう！ | 作っちゃうおじさん制作記録</a><br>
 こちらのソースコードを元に作成。初学のenchant.jsについてメチャクチャ学ばせてもらいました（感謝）。<br><br>
 <a href="https://www.irasutoya.com/">かわいいフリー素材集 いらすとや</a><br>
