--- a/games/starry/index.html
+++ b/games/starry/index.html
@@ -24,9 +24,12 @@
       <div id="unity-fullscreen-button"></div>
       <div id="unity-build-title">Starry Breaker</div>
     </div>
+    <div>
+      <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「＋」に当たるとボールが増えるよ！<br>実在のネタ言語「<a
+          href="https://github.com/inazak/starry">Starry</a>」の「Hello,
+        World!」出力プログラム（星空っぽい見た目になる）を、ブロック崩しで破壊するゲームです。</p>
+    </div>
   </div>
-  <p text-align="center">実在のネタ言語「<a href="https://github.com/inazak/starry">Starry</a>」の「Hello,
-    World!」出力プログラム（星空っぽい見た目になる）をブロック崩しで破壊するゲームです。<br>←→: 移動<br>スペース: リトライ(ゲームオーバーかクリア時)<br>「＋」に当たるとボールが増えるよ！</p>
   <script>
     var container = document.querySelector("#unity-container");
     var canvas = document.querySelector("#unity-canvas");
