--- a/games/starry/index.html
+++ b/games/starry/index.html
@@ -25,8 +25,8 @@
       <div id="unity-build-title">Starry Breaker</div>
     </div>
     <div>
-      <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「＋」に当たるとボールが増えるよ！<br>実在のネタ言語「<a
-          href="https://github.com/inazak/starry">Starry</a>」の「Hello,
+      <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「＋」に当たるとボールが増えるよ！<br><br>+ * + * + * +
+        * + * + * + * + * +<br><br>実在のネタ言語「<a href="https://github.com/inazak/starry">Starry</a>」の「Hello,
         World!」出力プログラム（星空っぽい見た目になる）を、ブロック崩しで破壊するゲームです。</p>
     </div>
   </div>
