--- a/games/starry/index.html
+++ b/games/starry/index.html
@@ -24,10 +24,11 @@
       <div id="unity-fullscreen-button"></div>
       <div id="unity-build-title">Starry Breaker</div>
     </div>
-    <div>
-      <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「＋」に当たるとボールが増えるよ！<br><br>+ * + * + * +
-        * + * + * + * + * +<br><br>実在のネタ言語「<a href="https://github.com/inazak/starry">Starry</a>」の「Hello,
-        World!」出力プログラム（星空っぽい見た目になる）を、ブロック崩しで破壊するゲームです。</p>
+    <div style="width;600px">
+      <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「<span
+          style="color:orange;">＋</span>」に当たるとボールが増えるよ！<br><br>実在のネタ言語「<a
+          href="https://github.com/inazak/starry">Starry</a>」の「Hello,
+        World!」出力プログラム（星空っぽい見た目になる）を、<br>ブロック崩しで破壊するゲームです。</p>
     </div>
   </div>
   <script>
