--- a/games/starry/index.html
+++ b/games/starry/index.html
@@ -28,7 +28,7 @@
       <p text-align="center"><br><br>←→(矢印): 移動<br>[スペース]: リトライ(ゲームオーバーかクリア時)<br>「<span
           style="color:orange;">＋</span>」に当たるとボールが増えるよ！<br><br>実在のネタ言語「<a
           href="https://github.com/inazak/starry">Starry</a>」の「Hello,
-        World!」出力プログラム（星空っぽい見た目になる）を、<br>ブロック崩しで破壊するゲームです。</p>
+        World!」出力プログラム<br>（星空っぽい見た目になる）をブロック崩しで破壊するゲーム</p>
     </div>
   </div>
   <script>
